fixed some problems with ui

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     <div class="search-wrapper">
         <div class="input-holder">
-            <input type="text" class="search-input" placeholder="Type to search" />
+            <input id="query" type="text" class="search-input" placeholder="Type to search" />
             <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
         </div>
         <span class="close" onclick="searchToggle(this, event);"></span>
@@ -35,12 +35,15 @@
     <br>
     <br>
     <br>
-
+    <!-- style="background: url('https://images.unsplash.com/photo-1559113513-d5e09c78b9dd?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9')" -->
     <section class="main">
         <div class="scrollmenu">
             <div class="wrap">
-                <div class="container ">
-                    <p>01. Normal</p>
+                <div id="1" class="container">
+                    <!-- <div class="overlay"> -->
+                    <!-- <img src="https://images.unsplash.com/photo-1559113513-d5e09c78b9dd?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9"> -->
+                    <p>01. asdsd sd sasd e we adasd d s a</p>
+                    <!-- </div> -->
                 </div>
             </div>
 
